sumo/tests/jtrrouter/errors/false_output/errors.jtrrouter
Error: Could not build output file 'output/routes.rou.xml' (No such file or directory).
Quitting (on error).
